# Master_IOT_Semester_1

./: README.md
Design_and_algorithm/ArrayExercise/: CMakeLists.txt  CMakeLists.txt.user.2bbb870  mainwindow.cpp
Design_and_algorithm/BSTwords/: bst.cpp  bst.h  widget.cpp  widget.ui  word.cpp  word.h
Design_and_algorithm/CBasicPractice/: CMakeLists.txt  extern.cpp  extern.h  main.cpp
Design_and_algorithm/ColorLines/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Design_and_algorithm/DESCHINKEL KARINE_Project_Matric/: Network Analysis and Optimization Report.docx  SHIRAZ-KHAN.docx  cost3.txt  instal_cost3.txt  mat3.txt
Design_and_algorithm/Drones Final Project/: documentation.docx
Design_and_algorithm/Example13/: CMakeLists.txt  stack.cpp  stack.h
Design_and_algorithm/Matric1/: CMakeLists.txt
Design_and_algorithm/MatricCheck/: CMakeLists.txt  main.cpp
Design_and_algorithm/Matric_3/: CMakeLists.txt  main.cpp
Design_and_algorithm/Project1/: CMakeLists.txt  canvas.cpp  mainwindow.cpp  mainwindow.ui
Design_and_algorithm/QtPolygonsExercice/: QtPolygonsExercice.pro  canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygon.cpp  polygon.h  vector2d.cpp  vector2d.h
Design_and_algorithm/lab1/: CMakeLists.txt  CMakeLists.txt.user.2bbb870  canvas.cpp  canvas.h  main.cpp  mainwindow.cpp  mainwindow.ui
Design_and_algorithm/stackQt/: MDataFile.h  (+9 more)
Embedded_Systems/: course_links.txt
Embedded_Systems/Cuda_GPU/: CMakeLists.txt  Video_Unscrambler_Full_Presentation.pptx  Video_Unscrambler_Presentation (1).pptx  Video_Unscrambler_Presentation.pptx
(+150 files in other folders)
